--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"phpoffice/phpspreadsheet": "^2.0",
+		"phpoffice/phpspreadsheet": "*",
 		"ramsey/uuid": "*",
 		"tecnickcom/tcpdf": "^6.6"
 	},
